--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-neurokit2
-numpy
-pandas
-plotly
-streamlit
-wfdb
-pywt
+neurokit2==0.2.10
+numpy==2.2.5
+pandas==2.2.3
+plotly==5.24.1
+streamlit==1.39.0
+wfdb==4.3.0
